project(mono)

add_definitions(-DUNICODE)
add_definitions(-D_UNICODE)
add_definitions(-D_FEATURE_NO_HOST)
add_definitions(-D__MONO__)

add_definitions(-DFEATURE_CORECLR)

include_directories(.)

if(CLR_CMAKE_PLATFORM_UNIX)
  add_compile_options(-fPIE)
endif(CLR_CMAKE_PLATFORM_UNIX)

set(MONO_SOURCES
    mono.cpp
)

if(WIN32)
  # set(ILASM_RESOURCES Native.rc)
  # list(APPEND MONO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/mono.def)
  add_definitions(-DFX_VER_INTERNALNAME_STR=mono.dll)
  
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_suspend_all_other_threads=coreclr.mono_thread_suspend_all_other_threads")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_pool_cleanup=coreclr.mono_thread_pool_cleanup")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_threads_set_shutting_down=coreclr.mono_threads_set_shutting_down")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_set_shutting_down=coreclr.mono_runtime_set_shutting_down")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_is_shutting_down=coreclr.mono_runtime_is_shutting_down")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_finalize=coreclr.mono_domain_finalize")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_cleanup=coreclr.mono_runtime_cleanup")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_get_virtual_method=coreclr.mono_object_get_virtual_method")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_verifier_set_mode=coreclr.mono_verifier_set_mode")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_security_set_mode=coreclr.mono_security_set_mode")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_add_internal_call=coreclr.mono_add_internal_call")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_jit_cleanup=coreclr.mono_unity_jit_cleanup")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_init=coreclr.mono_jit_init")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_init_version=coreclr.mono_jit_init_version")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_exec=coreclr.mono_jit_exec")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_info_get_code_start=coreclr.mono_jit_info_get_code_start")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_info_get_code_size=coreclr.mono_jit_info_get_code_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_from_name=coreclr.mono_class_from_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_from_name_case=coreclr.mono_class_from_name_case")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_assembly_open=coreclr.mono_domain_assembly_open")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_create_appdomain=coreclr.mono_domain_create_appdomain")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_unload=coreclr.mono_domain_unload")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_new=coreclr.mono_object_new")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_object_init=coreclr.mono_runtime_object_init")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_invoke=coreclr.mono_runtime_invoke")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_set_value=coreclr.mono_field_set_value")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_value=coreclr.mono_field_get_value")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_offset=coreclr.mono_field_get_offset")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_fields=coreclr.mono_class_get_fields")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_nested_types=coreclr.mono_class_get_nested_types")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_methods=coreclr.mono_class_get_methods")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_userdata_offset=coreclr.mono_class_get_userdata_offset")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_userdata=coreclr.mono_class_get_userdata")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_set_userdata=coreclr.mono_class_set_userdata")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_get=coreclr.mono_domain_get")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_root_domain=coreclr.mono_get_root_domain")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_get_id=coreclr.mono_domain_get_id")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_foreach=coreclr.mono_assembly_foreach")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_close=coreclr.mono_image_close")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_socket_security_enabled_set=coreclr.mono_unity_socket_security_enabled_set")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_get_name=coreclr.mono_image_get_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_object_class=coreclr.mono_get_object_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_signal_chaining=coreclr.mono_set_signal_chaining")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_seh_handler=coreclr.mono_unity_seh_handler")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_set_unhandled_exception_handler=coreclr.mono_unity_set_unhandled_exception_handler")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_runtime_set_main_args=coreclr.mono_unity_runtime_set_main_args")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_invoke_array=coreclr.mono_runtime_invoke_array")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_array_addr_with_size=coreclr.mono_array_addr_with_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_string_to_utf16=coreclr.mono_string_to_utf16")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_name=coreclr.mono_field_get_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_parent=coreclr.mono_field_get_parent")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_type=coreclr.mono_field_get_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_type_get_type=coreclr.mono_type_get_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_get_name=coreclr.mono_method_get_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_full_name=coreclr.mono_method_full_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_get_image=coreclr.mono_assembly_get_image")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_get_class=coreclr.mono_method_get_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_get_class=coreclr.mono_object_get_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_isinst=coreclr.mono_object_isinst")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_valuetype=coreclr.mono_class_is_valuetype")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_blittable=coreclr.mono_class_is_blittable")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_signature_get_param_count=coreclr.mono_signature_get_param_count")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_string_to_utf8=coreclr.mono_string_to_utf8")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_string_empty_wrapper=coreclr.mono_unity_string_empty_wrapper")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_string_new_wrapper=coreclr.mono_string_new_wrapper")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_string_new_len=coreclr.mono_string_new_len")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_string_from_utf16=coreclr.mono_string_from_utf16")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_parent=coreclr.mono_class_get_parent")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_namespace=coreclr.mono_class_get_namespace")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_subclass_of=coreclr.mono_class_is_subclass_of")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_name=coreclr.mono_class_get_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_type_get_name=coreclr.mono_type_get_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_type_get_class=coreclr.mono_type_get_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_exception_from_name_msg=coreclr.mono_exception_from_name_msg")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_exception_from_name_two_strings=coreclr.mono_exception_from_name_two_strings")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_exception_argument_null=coreclr.mono_get_exception_argument_null")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_raise_exception=coreclr.mono_raise_exception")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_exception_class=coreclr.mono_get_exception_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_array_class=coreclr.mono_get_array_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_string_class=coreclr.mono_get_string_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_boolean_class=coreclr.mono_get_boolean_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_byte_class=coreclr.mono_get_byte_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_char_class=coreclr.mono_get_char_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_int16_class=coreclr.mono_get_int16_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_int32_class=coreclr.mono_get_int32_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_int64_class=coreclr.mono_get_int64_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_single_class=coreclr.mono_get_single_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_double_class=coreclr.mono_get_double_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_array_new=coreclr.mono_array_new")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_array_new_2d=coreclr.mono_unity_array_new_2d")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_array_new_3d=coreclr.mono_unity_array_new_3d")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_array_class_get=coreclr.mono_array_class_get")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_array_element_size=coreclr.mono_class_array_element_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_type_get_object=coreclr.mono_type_get_object")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_generic=coreclr.mono_class_is_generic")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_inflated=coreclr.mono_class_is_inflated")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:unity_mono_method_is_generic=coreclr.unity_mono_method_is_generic")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:unity_mono_method_is_inflated=coreclr.unity_mono_method_is_inflated")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_attach=coreclr.mono_thread_attach")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_detach=coreclr.mono_thread_detach")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_exit=coreclr.mono_thread_exit")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_current=coreclr.mono_thread_current")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_set_main=coreclr.mono_thread_set_main")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_find_plugin_callback=coreclr.mono_set_find_plugin_callback")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_security_enable_core_clr=coreclr.mono_security_enable_core_clr")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_security_set_core_clr_platform_callback=coreclr.mono_security_set_core_clr_platform_callback")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_unhandled_exception_policy_set=coreclr.mono_runtime_unhandled_exception_policy_set")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_nesting_type=coreclr.mono_class_get_nesting_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_vtable=coreclr.mono_class_vtable")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_get_object=coreclr.mono_method_get_object")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_signature=coreclr.mono_method_signature")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_signature_get_params=coreclr.mono_signature_get_params")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_signature_get_return_type=coreclr.mono_signature_get_return_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_type=coreclr.mono_class_get_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_debug_init=coreclr.mono_debug_init")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_is_debugger_attached=coreclr.mono_is_debugger_attached")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_debug_open_image_from_memory=coreclr.mono_debug_open_image_from_memory")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_get_flags=coreclr.mono_field_get_flags")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_open_from_data_full=coreclr.mono_image_open_from_data_full")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_open_from_data_with_name=coreclr.mono_image_open_from_data_with_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_load_from=coreclr.mono_assembly_load_from")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_fill_assembly_name=coreclr.mono_assembly_fill_assembly_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_stringify_assembly_name=coreclr.mono_stringify_assembly_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_name_parse=coreclr.mono_assembly_name_parse")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_loaded=coreclr.mono_assembly_loaded")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_get_table_rows=coreclr.mono_image_get_table_rows")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_class_get=coreclr.mono_unity_class_get")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_metadata_signature_equal=coreclr.mono_metadata_signature_equal")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_value_box=coreclr.mono_value_box")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_image=coreclr.mono_class_get_image")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_signature_is_instance=coreclr.mono_signature_is_instance")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_method_get_last_managed=coreclr.mono_method_get_last_managed")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_enum_class=coreclr.mono_get_enum_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_byref_type=coreclr.mono_class_get_byref_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_field_static_get_value=coreclr.mono_field_static_get_value")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_set_embeddinghostname=coreclr.mono_unity_set_embeddinghostname")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_assemblies_path=coreclr.mono_set_assemblies_path")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gchandle_new=coreclr.mono_gchandle_new")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gchandle_get_target=coreclr.mono_gchandle_get_target")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gchandle_new_weakref=coreclr.mono_gchandle_new_weakref")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gchandle_is_in_domain=coreclr.mono_gchandle_is_in_domain")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_get_object=coreclr.mono_assembly_get_object")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gchandle_free=coreclr.mono_gchandle_free")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_stack_walk=coreclr.mono_stack_walk")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_pmip=coreclr.mono_pmip")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_delegate_invoke=coreclr.mono_runtime_delegate_invoke")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_info_table_find=coreclr.mono_jit_info_table_find")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_debug_lookup_source_location=coreclr.mono_debug_lookup_source_location")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_debug_free_source_location=coreclr.mono_debug_free_source_location")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_properties=coreclr.mono_class_get_properties")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_property_get_get_method=coreclr.mono_property_get_get_method")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_new_alloc_specific=coreclr.mono_object_new_alloc_specific")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_new_specific=coreclr.mono_object_new_specific")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gc_collect=coreclr.mono_gc_collect")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gc_max_generation=coreclr.mono_gc_max_generation")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gc_get_used_size=coreclr.mono_gc_get_used_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gc_get_heap_size=coreclr.mono_gc_get_heap_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_gc_wbarrier_generic_store=coreclr.mono_gc_wbarrier_generic_store")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_get_assembly=coreclr.mono_image_get_assembly")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_open=coreclr.mono_assembly_open")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_is_enum=coreclr.mono_class_is_enum")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_enum_basetype=coreclr.mono_class_enum_basetype")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_instance_size=coreclr.mono_class_instance_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_get_size=coreclr.mono_object_get_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_type_token=coreclr.mono_class_get_type_token")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_image_get_filename=coreclr.mono_image_get_filename")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_load_from_full=coreclr.mono_assembly_load_from_full")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_interfaces=coreclr.mono_class_get_interfaces")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_assembly_close=coreclr.mono_assembly_close")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_property_from_name=coreclr.mono_class_get_property_from_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_method_from_name=coreclr.mono_class_get_method_from_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_from_mono_type=coreclr.mono_class_from_mono_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_rank=coreclr.mono_class_get_rank")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_element_class=coreclr.mono_class_get_element_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_class_is_interface=coreclr.mono_unity_class_is_interface")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_class_is_abstract=coreclr.mono_unity_class_is_abstract")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_array_element_size=coreclr.mono_array_element_size")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_domain_set=coreclr.mono_domain_set")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_domain_set_config=coreclr.mono_unity_domain_set_config")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_push_appdomain_ref=coreclr.mono_thread_push_appdomain_ref")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_thread_pop_appdomain_ref=coreclr.mono_thread_pop_appdomain_ref")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_runtime_exec_main=coreclr.mono_runtime_exec_main")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_get_corlib=coreclr.mono_get_corlib")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_field_from_name=coreclr.mono_class_get_field_from_name")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_class_get_flags=coreclr.mono_class_get_flags")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_parse_default_optimizations=coreclr.mono_parse_default_optimizations")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_defaults=coreclr.mono_set_defaults")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_config_parse=coreclr.mono_config_parse")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_dirs=coreclr.mono_set_dirs")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_set_break_policy=coreclr.mono_set_break_policy")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_jit_parse_options=coreclr.mono_jit_parse_options")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_object_unbox=coreclr.mono_object_unbox")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_get_attr=coreclr.mono_custom_attrs_get_attr")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_construct=coreclr.mono_custom_attrs_construct")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_has_attr=coreclr.mono_custom_attrs_has_attr")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_from_field=coreclr.mono_custom_attrs_from_field")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_from_method=coreclr.mono_custom_attrs_from_method")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_from_class=coreclr.mono_custom_attrs_from_class")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_from_assembly=coreclr.mono_custom_attrs_from_assembly")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_reflection_get_custom_attrs_by_type=coreclr.mono_reflection_get_custom_attrs_by_type")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_custom_attrs_free=coreclr.mono_custom_attrs_free")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_loader_get_last_error_and_error_prepare_exception=coreclr.mono_unity_loader_get_last_error_and_error_prepare_exception")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_dl_fallback_register=coreclr.mono_dl_fallback_register")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_dl_fallback_unregister=coreclr.mono_dl_fallback_unregister")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_set_vprintf_func=coreclr.mono_unity_set_vprintf_func")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_stop_gc_world=coreclr.mono_unity_liveness_stop_gc_world")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_finalize=coreclr.mono_unity_liveness_finalize")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_start_gc_world=coreclr.mono_unity_liveness_start_gc_world")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_free_struct=coreclr.mono_unity_liveness_free_struct")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_calculation_begin=coreclr.mono_unity_liveness_calculation_begin")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_calculation_end=coreclr.mono_unity_liveness_calculation_end")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_calculation_from_root=coreclr.mono_unity_liveness_calculation_from_root")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_liveness_calculation_from_statics=coreclr.mono_unity_liveness_calculation_from_statics")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:unity_mono_reflection_method_get_method=coreclr.unity_mono_reflection_method_get_method")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_unity_g_free=coreclr.mono_unity_g_free")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_trace_set_level_string=coreclr.mono_trace_set_level_string")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /export:mono_trace_set_mask_string=coreclr.mono_trace_set_mask_string")
endif(WIN32)


if(CLR_CMAKE_PLATFORM_UNIX)
  # Need generate a right form of asmparse.cpp to avoid the following options.
  # Clang also produces a bad-codegen on this prebuilt file with optimization.
  # https://github.com/dotnet/coreclr/issues/2305
  add_compile_options(-Wno-delete-non-virtual-dtor)
  add_compile_options(-Wno-deprecated-register)
  add_compile_options(-Wno-array-bounds)
  add_compile_options(-Wno-unused-label)
endif(CLR_CMAKE_PLATFORM_UNIX)

add_library_clr(mono
    SHARED
    ${MONO_SOURCES}
)

set(MONO_LINK_LIBRARIES
  utilcodestaticnohost
  mscorpe
  mdhotdata_full
  corguids
)

if(CLR_CMAKE_PLATFORM_UNIX)
  target_link_libraries(mono
    ${MONO_LINK_LIBRARIES}
    ceefgen
    unixcoreclrloader
    utilcodestaticnohost
    mscorrc_debug
    coreclrpal
    palrt
  )

  # FreeBSD and NetBSD implement dlopen(3) in libc
  if(NOT CMAKE_SYSTEM_NAME STREQUAL FreeBSD AND NOT CMAKE_SYSTEM_NAME STREQUAL NetBSD)
    target_link_libraries(mono
      dl
    )
  endif(NOT CMAKE_SYSTEM_NAME STREQUAL FreeBSD AND NOT CMAKE_SYSTEM_NAME STREQUAL NetBSD)
else()
  target_link_libraries(mono
    ${MONO_LINK_LIBRARIES}
    coreclr
    ole32
    oleaut32
    shell32
    Shlwapi
  )
endif(CLR_CMAKE_PLATFORM_UNIX)

install_clr(mono)

